<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="start|center_vertical"
            android:padding="16dp"
            android:text="@string/change_language"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_settings"
            tools:text="Change Language" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_setting">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder"

            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:textOff="@string/on"
            android:textOn="@string/off"

            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>