<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.CobaUserGithubApp2.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:weightSum="10">

        <StackView
            android:id="@+id/stack_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:loopViews="true" />

        <TextView
            android:id="@+id/banner_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:background="@color/light_blue_900"
            android:text="@string/click_see_list_favorite"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_refresh_widget"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:src="@drawable/ic_refresh"
            android:background="@color/light_blue_900"
            android:layout_gravity="center"
            android:contentDescription="@string/refresh"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/empty_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</FrameLayout>