<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserGithubActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="60dp"
                    tools:src="@drawable/ic_settings" />


                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Username" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_vertical|center_horizontal"

                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/ic_people"
                        tools:text="@string/followers" />

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:gravity="center_vertical|center_horizontal"
                        android:textSize="14sp"

                        app:drawableTopCompat="@drawable/ic_repository"
                        tools:text="@string/repository" />

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="center_vertical|center_horizontal"

                        android:textSize="14sp"
                        app:drawableTopCompat="@drawable/ic_people"
                        tools:text="@string/following" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_company"
                    tools:text="Company" />

                <TextView
                    android:id="@+id/tv_lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_location"
                    tools:text="lokasi" />

                <ToggleButton
                    android:id="@+id/toggle_Button_favorite"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:background="@drawable/favorite_toggle"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOff=""
                    android:textOn="" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_gravity="center"
                    app:tabMode="scrollable" />


            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>